--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/request-promise-native": "1.0.17",
     "concurrently": "5.1.0",
     "nodemon": "2.0.2",
+    "tsc": "1.20150623.0",
+    "typescript": "3.8.3",
     "yargs": "15.3.1"
   }
 }
